--- a/billio-backend/.env.dev
+++ b/billio-backend/.env.dev
@@ -1,6 +1,6 @@
 APP_NAME="Billio DEV"
 APP_ENV=dev
-DATABASE_URL=mysql://billio:db-billio@127.0.0.1:3306/billio?serverVersion=5.7
+#DATABASE_URL=mysql://billio:db-billio@127.0.0.1:3306/billio?serverVersion=5.7
 
 APP_DEBUG=true
 
@@ -8,11 +8,11 @@ CLIENT_ID=1_4konkidqx9k4s0c8g40wk840k8kg00g4s4wcgokwsok8g0s0c4
 CLIENT_SECRET=w3ddgbch2y8oogccscowos08c84o084ok0w4444ooo8w80ck4
 
 CREDENTIALS_ID=2_4mqkmyk5cqkgo44k40gcsco048go8ow04ggc0sww40cc4wog4k
-CREDENTIALS_SECRET=2tzeplapikg0gg4gc84ggcwc8kc0owg0sskwkc0o8k48cc8ksg
+#CREDENTIALS_SECRET=2tzeplapikg0gg4gc84ggcwc8kc0owg0sskwkc0o8k48cc8ksg
 
 BASE_URL=https://api.billio.essedi.es
 
-FIREBASE_API_KEY=AAAACsrnwWw:APA91bFsRuwc3GqbQStheiZ6JTJ-RFt_v6a-pwhjVoPKCvy2kIr0VHhBuRy89HO1hoM-HXSZz-7y03ldXiqXFYmq3fNjHvc71NYuma9XLqA0DoaqI7hLzwaoau6w3vrOHh_XWb3XZhbN
+#FIREBASE_API_KEY=AAAACsrnwWw:APA91bFsRuwc3GqbQStheiZ6JTJ-RFt_v6a-pwhjVoPKCvy2kIr0VHhBuRy89HO1hoM-HXSZz-7y03ldXiqXFYmq3fNjHvc71NYuma9XLqA0DoaqI7hLzwaoau6w3vrOHh_XWb3XZhbN
 
 GOOGLE_DEBUG=TRUE
 IOS_DEBUG=TRUE
